commit before styling

--- a/my-app/src/pokecard.scss
+++ b/my-app/src/pokecard.scss
@@ -1,3 +1,6 @@
 .Pokecard {
-  border: 3px solid mediumaquamarine;
+  width: 200px;
+  margin: 3px;
+  padding: 3px;
+  box-shadow: 10px 3px 3px -1px rgba(0, 0, 0, 0.5);
 }
