--- a/my-app/src/pokecard.scss
+++ b/my-app/src/pokecard.scss
@@ -1,6 +1,7 @@
 .Pokecard {
-  width: 200px;
-  margin: 3px;
-  padding: 3px;
-  box-shadow: 10px 3px 3px -1px rgba(0, 0, 0, 0.5);
+  width: 300px;
+  margin: 30px;
+  padding: 30px;
+  box-shadow: 7px 10px 12px -7px rgba(0, 0, 0, 0.56);
+  background: white;
 }
