befor lass commit

--- a/my-app/src/pokecard.scss
+++ b/my-app/src/pokecard.scss
@@ -4,4 +4,8 @@
   padding: 30px;
   box-shadow: 7px 10px 12px -7px rgba(0, 0, 0, 0.56);
   background: white;
+  border-radius: 5px;
+}
+.Pokecard-data {
+  font-size: 80%;
 }
