--- a/my-app/src/pokedex.scss
+++ b/my-app/src/pokedex.scss
@@ -4,3 +4,12 @@
   justify-content: space-evenly;
   flex-wrap: wrap;
 }
+.Pokedex-data {
+  font-size: 80%;
+}
+.Pokedex-Winner {
+  color: rgb(166, 240, 166);
+}
+.Pokedex-Loser {
+  color: rgb(241, 135, 135);
+}
