--- a/my-app/src/pokecard.scss
+++ b/my-app/src/pokecard.scss
@@ -1,11 +1,25 @@
+$bgcolor: white;
+$green: rgb(166, 240, 166);
 .Pokecard {
   width: 300px;
   margin: 30px;
   padding: 30px;
   box-shadow: 7px 10px 12px -7px rgba(0, 0, 0, 0.56);
-  background: white;
+  background: $bgcolor;
   border-radius: 5px;
 }
 .Pokecard-data {
   font-size: 80%;
+}
+.Pokecard-img {
+  //background: #eceff1;
+  border-radius: 3px;
+  margin: 1rem 1rem;
+}
+.Pokecard {
+  transition: all ease 500ms;
+  &:hover {
+    transform: scale(1.1);
+    opacity: 0.89;
+  }
 }
